--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,9 @@
 .post-image{
     width: 100%;
     height: 200px;
-=======
+}
+
+
 *{
     box-sizing: border-box;
     margin: 0;
@@ -75,3 +77,66 @@ h1{
 p .lead a:hover{
     color: #8C52FF;
 }
+
+/* footer styles */
+
+footer {
+    background-color: #8C52FF;
+}
+
+.footer-content {
+    padding: 50px;
+    margin-left: 40%;
+    left: 50px;
+    font-size: 40px;
+    color: white;
+}
+
+#email-input {
+    font-size: 20px;
+}
+
+.submit-button {
+    font-size: 18px;
+    border-radius: 25px;
+    padding: 5px 35px;
+}
+
+.submit-button i {
+    font-weight: bold;
+    font-size: 24px;
+}
+
+.bottom {
+    display: flex;
+    margin: 20px; 
+    align-items: center; 
+}
+
+.copyright, .icons-footer, .nav-footer {
+    margin-left: 250px;
+}
+
+/* icons style */
+.icons-footer i {
+    font-size: 20px;
+    border: 1px solid white;
+    border-radius: 50px;
+    padding: 10px 10px;
+    color: white; 
+    margin-left: 20px; 
+    margin-bottom: 20px;
+}
+
+nav ul li {
+    list-style-type: none; 
+    display: inline-block;
+    margin-right: 10px;   
+}
+
+nav ul li a {
+    text-decoration-line: none;
+    color: white;
+    padding: 0;
+}
+
