--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,9 @@ a {
     padding: 0;
     font-family:"Poppins", sans-serif;
 }
+#hero-container{
+    margin-top: 100px;
+}
 
 #hero-p{
     font-family: "Poppins", sans-serif;
